syntax = "proto3";
package cosmos.mint.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/mint/v1beta1/mint.proto";
import "amino/amino.proto";

option go_package = "cosmossdk.io/x/mint/types";

// GenesisState defines the mint module's genesis state.
message GenesisState {
  // minter is a space for holding current inflation information.
  Minter minter = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // params defines all the parameters of the module.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // reduction_started_epoch is the first epoch in which the reduction of mint
  // begins.
  int64 reduction_started_epoch = 3;
  // int64 reduction_started_epoch = 3 [(cosmos_proto.field_added_in) = "cosmos-sdk v0.52"];
}
